Change to chrono-db.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ gate-ubuntu:
     - ubuntu
     - gate
   script:
-    - ~/.super-storm-enroute/tools/ci reactors $(pwd)
+    - ~/.super-storm-enroute/tools/ci chrono-db $(pwd)
 
 
 gate-osx:
@@ -32,7 +32,7 @@ gate-osx:
     - osx
     - gate
   script:
-    - ~/.super-storm-enroute/tools/ci reactors $(pwd)
+    - ~/.super-storm-enroute/tools/ci chrono-db $(pwd)
   cache:
     paths:
       - /root/.ivy2/
